--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -353,7 +353,7 @@
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "체크포인트 제한 우회",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS/TIP": "50개의 체크포인트 제한을 우회합니다",
   "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE": "연습 모드에서 코인 획득",
-  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "연습 모드에서 시크릿 코인과 유저 코인을 획득할 수 있습니다, Made by WEGFan",
+  "LEVEL/HACK_COLLECT_COINS_IN_PRACTICE/TIP": "연습 모드에서 시크릿 코인과 유저 코인을 획득할 수 있습니다. Made by WEGFan",
   "LEVEL/HACK_CONFIRM_EXIT": "종료 확인",
   "LEVEL/HACK_CONFIRM_EXIT/TIP": "레벨을 종료하기 전에 확인을 요구합니다",
   "LEVEL/HACK_CONFIRM_FULL_RESET": "전체 초기화 확인",
@@ -391,7 +391,7 @@
   "LEVEL/HACK_SHOW_TRIGGERS": "트리거 표시",
   "LEVEL/HACK_SHOW_TRIGGERS/TIP": "레벨에서 트리거를 표시합니다",
   "LEVEL/HACK_SHIPCOPTER": "쉽콥터",
-  "LEVEL/HACK_SHIPCOPTER/TIP": "스윙모드에 비행기 조작을 추가합니다, 물리 엔진은 유지됩니다",
+  "LEVEL/HACK_SHIPCOPTER/TIP": "스윙모드에 비행기 조작을 추가합니다. 물리 엔진은 유지됩니다",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER": "히트박스 승수",
   "LEVEL/HITBOX_MULTIPLIER/HACK_HITBOX_MULTIPLIER/TIP": "히트박스 승수",
   "LEVEL/HITBOX_MULTIPLIER/DROPDOWN/HAZARDS/ENABLED": "위험",
@@ -420,7 +420,7 @@
   "LEVEL/NOCLIP/DROPDOWN/SAFE_MODE": "안전 모드",
   "LEVEL/NOCLIP/DROPDOWN/TINT/CHECKBOX": "색조",
   "LEVEL/NOCLIP/HACK_NOCLIP": "노클립",
-  "LEVEL/NOCLIP/HACK_NOCLIP/TIP": "플레이어를 무적 상태로 만듭니다",
+  "LEVEL/NOCLIP/HACK_NOCLIP/TIP": "플레이어를 무적 상태로 만듭니다.",
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/ACCURACY_LIMIT": "정확도 제한",
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/ACCURACY_LIMIT/SUF": "%",
   "LEVEL/NOCLIP_LIMITS/DROPDOWN/ACCURACY_LIMIT_ON": "정확도 제한 켜기",
@@ -593,11 +593,11 @@
   "DISPLAY/FPS/SPINNER": "FPS",
   "DISPLAY/FPS/SPINNER/SUF": " FPS",
   "DISPLAY/FPS/HACK_FPS": "FPS 잠금 해제",
-  "DISPLAY/FPS/HACK_FPS/TIP": "게임의 FPS 목표치를 설정합니다, 물리 엔진은 물리 우회 기능을 사용하지 않는 한 변경되지 않습니다",
+  "DISPLAY/FPS/HACK_FPS/TIP": "게임의 FPS 목표치를 설정합니다. 물리 엔진은 물리 우회 기능을 사용하지 않는 한 변경되지 않습니다",
   "DISPLAY/HACK_VSYNC": "수직 동기화",
   "DISPLAY/HACK_VSYNC/TIP": "FPS를 디스플레이 Hz와 동기화하여 화면 찢김을 줄입니다",
   "DISPLAY/PHYSICS_BYPASS/HACK_PHYSICS_BYPASS": "물리 TPS",
-  "DISPLAY/PHYSICS_BYPASS/HACK_PHYSICS_BYPASS/TIP": "기본 240/s 물리 속도 제한을 해제하고, 목표 FPS/TPS(둘 중 가장 높은 값)로 설정합니다, 2.1 물리를 복제하지 않습니다",
+  "DISPLAY/PHYSICS_BYPASS/HACK_PHYSICS_BYPASS/TIP": "기본 240/s 물리 속도 제한을 해제하고, 목표 FPS/TPS(둘 중 가장 높은 값)로 설정합니다. 2.1 물리를 복제하지 않습니다",
   "DISPLAY/PHYSICS_BYPASS/SPINNER": "물리 틱 (Hz)",
   "DISPLAY/PHYSICS_BYPASS/SPINNER/SUF": "Hz",
   "DISPLAY/DELTA/HACK_LOCK_DELTA": "델타 고정",
