--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -236,7 +236,7 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "비율 (배)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "비율",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "배",
-  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "사망 시 웨이브 트릴",
+  "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "사망 시 웨이브 트레일",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "사망 시 웨이브 트레일을 계속 표시합니다",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "웨이브 펄스 승수",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE/SUF": "배",
